CHANGES
=======

* backup
* Added monitoring with timeouts and cleanup initialization
* Remove login api endpoints
* Added package cems2cli
* Control the running status in all the subtasks
* Added the control to power on/off dinamically
* Shared the list of machines to monitor and to control among all managers and controllers
* Added pm\_connector test
* Updated requirements.txt
* Communicated all the controllers and all the managers
* Better test plugins with random sleeps to simulate real system
* Added support to specify the connector in the machines yaml file
* Cloud analytics monitoring using multiple async task
* Created Cloud Analytics test plugins
* Restructured API managers & controllers using 3 classes to implement them
* Actions controller connected to Machines Control Manager + Added API endpoints to obtain plugins with filtering
* Monitoring controller connected to Cloud Analytics Manager
* Added endpoints to obtain de names of the plugins
* Unified Endpoints path on monitoring controller
* Launcher usign async library trio
* Added base plugins for machines control system
* Disable monitoring flag when disable a machine in the file
* Cloud Analytics + Machines Control Plugin system with Stevedore completed
* Update doc usign tox testing
* Reorganize API endpoints + added functions to communicate with other components
* Added base structure of machines\_control
* Update README.md
* Update requirements.txt
* Deleted files from the API (now external)
* Fixed imports usign external log and external schemas in the API
* Added support to use de config file params
* Moved log+schemas out of API package (shared system-wide)
* Added config parsing from config file
* Modify project name + general fixes importing modules
* Added base structure for python packages
* structured as a python package
* Improve log on loader.py and machine manager API
* Update: simpler loader.py + range with hostname + without crashed
* Added different cases